Fixed styling issues of footer text being cut off. Removed height specification of footer text

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -3,7 +3,6 @@ footer {
   bottom: 0;
   text-align: center;
   background-color: none;
-  height: 5%;
   width: 90%;
   margin: 0 5%;
   color: #BBBFCA;
